--- a/Sjuklöner/Views/Assistants/Delete.cshtml
+++ b/Sjuklöner/Views/Assistants/Delete.cshtml
@@ -36,6 +36,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.CareCompanyId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CareCompanyId)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Email)
         </dt>
 
