--- a/Sjuklöner/Views/CollectiveAgreements/Details.cshtml
+++ b/Sjuklöner/Views/CollectiveAgreements/Details.cshtml
@@ -19,6 +19,22 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.StartDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.StartDate)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EndDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EndDate)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.PerHourUnsocialEvening)
         </dt>
 
