--- a/Sjuklöner/Views/CollectiveAgreements/Edit.cshtml
+++ b/Sjuklöner/Views/CollectiveAgreements/Edit.cshtml
@@ -1,117 +1,125 @@
-﻿@model Sjuklöner.Models.CollectiveAgreement
+﻿@model Sjuklöner.Viewmodels.CollectiveAgreementEditVM
 
 @{
     ViewBag.Title = "Edit";
 }
-
-<h2>Edit</h2>
-
+<div class="row">
+    <p class="page-header5 col col-md-12">Uppdatera kollektivavtal och ersättningsbelopp</p>
+</div>
+<div class="row">
+    <p class="col col-md-12 col-left-margin-6">Uppgifterna används vid beräkning av kontrollbelopp</p>
+</div>
+<hr class="claim-divider" />
+<br />
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(model => model.CollAgreementHeader.Id)
+    @Html.HiddenFor(model => model.Type)
+    for (int i = 0; i < Model.CollAgreementInfo.Count(); i++)
+    {
+        @Html.HiddenFor(model => model.CollAgreementInfo[i].Id)
+    }
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>CollectiveAgreement</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <table class="table table-no-margin-bottom">
+        <tr>
+            <th class="table-large-font">
+                @Html.DisplayNameFor(model => model.CollAgreementHeader.Name)
+            </th>
+        </tr>
+        <tr>
+            <td class="large-table-font table-wide-column">
+                @Html.EditorFor(model => model.CollAgreementHeader.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.CollAgreementHeader.Name, "", new { @class = "text-danger" })
+            </td>
+        </tr>
+    </table>
+    @*<div class="row">
+            <div class="form-group">
+                @Html.LabelFor(model => model.CollAgreementHeader.Name, htmlAttributes: new { @class = "control-label col-md-2 display-right-align" })
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.CollAgreementHeader.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CollAgreementHeader.Name, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PerHourUnsocialEvening, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PerHourUnsocialEvening, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PerHourUnsocialEvening, "", new { @class = "text-danger" })
+            <div class="col col-md-6">
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PerHourUnsocialNight, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PerHourUnsocialNight, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PerHourUnsocialNight, "", new { @class = "text-danger" })
+        </div>*@
+        <br />
+            <table class="table">
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CollAgreementInfo[0].StartDate)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CollAgreementInfo[0].EndDate)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CollAgreementInfo[0].PerHourUnsocialEvening)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CollAgreementInfo[0].PerHourUnsocialNight)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CollAgreementInfo[0].PerHourUnsocialWeekend)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CollAgreementInfo[0].PerHourUnsocialHoliday)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CollAgreementInfo[0].PerHourOnCallWeekday)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CollAgreementInfo[0].PerHourOnCallWeekend)
+                    </th>
+                </tr>
+                @for (int i = 0; i < Model.CollAgreementInfo.Count(); i++)
+                {
+                    <tr>
+                        <td>
+                            @Html.EditorFor(model => model.CollAgreementInfo[i].StartDate, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.CollAgreementInfo[i].StartDate, "", new { @class = "text-danger" })
+                        </td>
+                        <td>
+                            @Html.EditorFor(model => model.CollAgreementInfo[i].EndDate, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.CollAgreementInfo[i].EndDate, "", new { @class = "text-danger" })
+                        </td>
+                        <td>
+                            @Html.EditorFor(model => model.CollAgreementInfo[i].PerHourUnsocialEvening, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.CollAgreementInfo[i].PerHourUnsocialEvening, "", new { @class = "text-danger" })
+                        </td>
+                        <td>
+                            @Html.EditorFor(model => model.CollAgreementInfo[i].PerHourUnsocialNight, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.CollAgreementInfo[i].PerHourUnsocialNight, "", new { @class = "text-danger" })
+                        </td>
+                        <td>
+                            @Html.EditorFor(model => model.CollAgreementInfo[i].PerHourUnsocialWeekend, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.CollAgreementInfo[i].PerHourUnsocialWeekend, "", new { @class = "text-danger" })
+                        </td>
+                        <td>
+                            @Html.EditorFor(model => model.CollAgreementInfo[i].PerHourUnsocialHoliday, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.CollAgreementInfo[i].PerHourUnsocialHoliday, "", new { @class = "text-danger" })
+                        </td>
+                        <td>
+                            @Html.EditorFor(model => model.CollAgreementInfo[i].PerHourOnCallWeekday, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.CollAgreementInfo[i].PerHourOnCallWeekday, "", new { @class = "text-danger" })
+                        </td>
+                        <td>
+                            @Html.EditorFor(model => model.CollAgreementInfo[i].PerHourOnCallWeekend, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.CollAgreementInfo[i].PerHourOnCallWeekend, "", new { @class = "text-danger" })
+                        </td>
+                    </tr>
+                }
+            </table>
+            <div class="row">
+                <div class="form-group">
+                    <div class="col col-md-1">
+                        <input class="btn btn-primary btn-primary-small btn-left-margin-22" type="submit" name="submitButton" value="Spara" id="proceed" />
+                    </div>
+                    <div class="col col-md-1">
+                        <input class="btn btn-secondary btn-secondary-small btn-left-margin-22" type="submit" name="submitButton" value="Avbryt" id="cancel" />
+                    </div>
+                </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PerHourUnsocialWeekend, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PerHourUnsocialWeekend, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PerHourUnsocialWeekend, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PerHourUnsocialHoliday, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PerHourUnsocialHoliday, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PerHourUnsocialHoliday, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PerHourOnCallWeekday, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PerHourOnCallWeekday, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PerHourOnCallWeekday, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PerHourOnCallWeekend, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PerHourOnCallWeekend, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PerHourOnCallWeekend, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PerHourPreparedWeekday, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PerHourPreparedWeekday, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PerHourPreparedWeekday, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PerHourPreparedWeekend, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PerHourPreparedWeekend, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PerHourPreparedWeekend, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.OvertimeFactor, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.OvertimeFactor, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.OvertimeFactor, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ExtraHOurFactor, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ExtraHOurFactor, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ExtraHOurFactor, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
