--- a/Sjuklöner/Views/Assistants/Details.cshtml
+++ b/Sjuklöner/Views/Assistants/Details.cshtml
@@ -35,6 +35,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.CareCompanyId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CareCompanyId)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Email)
         </dt>
 
