--- a/Sjuklöner/Views/Claims/Delete.cshtml
+++ b/Sjuklöner/Views/Claims/Delete.cshtml
@@ -63,11 +63,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ClaimSum)
+            @Html.DisplayNameFor(model => model.ClaimedSum)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ClaimSum)
+            @Html.DisplayFor(model => model.ClaimedSum)
         </dd>
 
         @*<dt>
@@ -275,17 +275,15 @@
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-
         <div class="row">
-
-        <div class="form-actions no-color">
-            <div class="col col-md-offset-2 col-md-1 no-padding-left">
-                <input type="submit" value="Bekräfta" class="btn btn-danger btn-danger-small" />
+            <div class="form-actions no-color">
+                <div class="col col-md-offset-2 col-md-1 no-padding-left">
+                    <input type="submit" value="Bekräfta" class="btn btn-danger btn-danger-small" />
+                </div>
+                <div class="col col-md-1">
+                    @Html.ActionLink("Avbryt", "Index", "Claims", null, new { @class = "btn btn-secondary btn-secondary-small" })
+                </div>
             </div>
-            <div class="col col-md-1">
-                @Html.ActionLink("Avbryt", "Index", "Claims", null, new { @class = "btn btn-secondary btn-secondary-small" })
-            </div>
-        </div>
         </div>
     }
 </div>
