--- a/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
@@ -5,16 +5,13 @@
 }
 <body>
     <div class="row index-page-margin">
-        @*<p class="col col-md-2"></p>*@
         <p class="page-header col col-md-10">Ansökningar, ombud</p>
-        @*<nl class="col col-md-offset-2 font-size-12">Vård- och omsorgsförvaltningen i Helsingborgs kommun</nl>*@
     </div>
-
     <br />
     <br />
     <div class="row">
         <div class="col">
-            @Html.ActionLink("Skapa ny ansökan", "Create", null, new { @class = "btn btn-primary btn-primary-wide" })
+            @Html.ActionLink("Skapa ny ansökan", "Create1", new { claimExists = 1 }, new { @class = "btn btn-primary btn-primary-wide" })
         </div>
     </div>
     <hr class="claim-divider" />
@@ -31,7 +28,7 @@
                             Referensnummer
                         </th>
                         <th class="small-col-ombud">
-                            Avslagen datum
+                            Beslutsdatum
                         </th>
                         <th class="small-col-ombud">
                             Kundens personnummer
@@ -106,7 +103,7 @@
     </div>
     <hr class="claim-divider" />
 
-    @*<div class="row">
+    <div class="row">
         <div class="col">
             <div class="second-page-header">
                 Utkast
@@ -160,17 +157,17 @@
                                 @Html.DisplayFor(modelItem => item.ClaimedSum)
                             </td>
                             <td>
-                                @Html.ActionLink("Uppdatera", "Create", new { refNumber = item.ReferenceNumber, id = 1 }, new { @class = "btn btn-success btn-success-small" })
+                                @Html.ActionLink("Uppdatera", "Create1", new { refNumber = item.ReferenceNumber }, new { @role = "button", @class = "btn btn-secondary btn-secondary-small" })
                             </td>
                             <td>
                                 @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })
                             </td>
                             <td>
-                                @Html.ActionLink("Skicka in", "SaveAmounts", new { id = item.Id }, new { @class = "btn btn-secondary btn-secondary-small" })
-                                @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
+                                @*@Html.ActionLink("Skicka in", "SaveAmounts", new { id = item.Id }, new { @class = "btn btn-secondary btn-secondary-small" })*@
+                                @*@Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
                                     @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
                                     @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })*@
-                            @*</td>
+                            </td>
                         </tr>
                     }
 
@@ -185,7 +182,7 @@
             }
         </div>
     </div>
-    <hr class="claim-divider" />*@
+    <hr class="claim-divider" />
 
     <div class="row">
         <div class="col">
