--- a/Sjuklöner/Views/CollectiveAgreements/Delete.cshtml
+++ b/Sjuklöner/Views/CollectiveAgreements/Delete.cshtml
@@ -1,112 +1,105 @@
-﻿@model Sjuklöner.Models.CollectiveAgreement
+﻿@model Sjuklöner.Viewmodels.CollectiveAgreementDeleteVM
 
 @{
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>CollectiveAgreement</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PerHourUnsocialEvening)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PerHourUnsocialEvening)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PerHourUnsocialNight)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PerHourUnsocialNight)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PerHourUnsocialWeekend)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PerHourUnsocialWeekend)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PerHourUnsocialHoliday)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PerHourUnsocialHoliday)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PerHourOnCallWeekday)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PerHourOnCallWeekday)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PerHourOnCallWeekend)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PerHourOnCallWeekend)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PerHourPreparedWeekday)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PerHourPreparedWeekday)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PerHourPreparedWeekend)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PerHourPreparedWeekend)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.OvertimeFactor)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.OvertimeFactor)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ExtraHOurFactor)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ExtraHOurFactor)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+<div class="row">
+    <p class="page-header5 col col-md-12">Ta bort kollektivavtalet</p>
 </div>
+    <div class="row">
+        <nl class="col col-md-12 col-left-margin-6 font-size-16">Klicka på "Bekräfta" nedan för att ta bort detta kollektivavtal</nl>
+    </div>
+<br />
+<br />
+@using (Html.BeginForm())
+{
+    @Html.HiddenFor(model => model.CollAgreementHeader.Id)
+    @Html.HiddenFor(model => model.Type)
+    for (int i = 0; i < Model.CollAgreementInfo.Count(); i++)
+    {
+        @Html.HiddenFor(model => model.CollAgreementInfo[i].Id)
+    }
+    @Html.AntiForgeryToken()
+    <div class="row">
+        <div class="form-group">
+            @*@Html.LabelFor(model => model.CollAgreementHeader.Name, htmlAttributes: new { @class = "control-label col-md-2 col-left-margin-18 subheading" }):*@
+            <div class="col-md-6 bold-36">
+                @Html.DisplayFor(model => model.CollAgreementHeader.Name, new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
+        <div class="col col-md-6">
+        </div>
+    </div>
+    <br />
+    <br />
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.CollAgreementInfo[0].StartDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CollAgreementInfo[0].EndDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CollAgreementInfo[0].PerHourUnsocialEvening)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CollAgreementInfo[0].PerHourUnsocialNight)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CollAgreementInfo[0].PerHourUnsocialWeekend)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CollAgreementInfo[0].PerHourUnsocialHoliday)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CollAgreementInfo[0].PerHourOnCallWeekday)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CollAgreementInfo[0].PerHourOnCallWeekend)
+            </th>
+        </tr>
+        @for (int i = 0; i < Model.CollAgreementInfo.Count(); i++)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(model => model.CollAgreementInfo[i].StartDate, new { htmlAttributes = new { @class = "form-control" } })
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.CollAgreementInfo[i].EndDate, new { htmlAttributes = new { @class = "form-control" } })
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.CollAgreementInfo[i].PerHourUnsocialEvening, new { htmlAttributes = new { @class = "form-control" } })
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.CollAgreementInfo[i].PerHourUnsocialNight, new { htmlAttributes = new { @class = "form-control" } })
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.CollAgreementInfo[i].PerHourUnsocialWeekend, new { htmlAttributes = new { @class = "form-control" } })
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.CollAgreementInfo[i].PerHourUnsocialHoliday, new { htmlAttributes = new { @class = "form-control" } })
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.CollAgreementInfo[i].PerHourOnCallWeekday, new { htmlAttributes = new { @class = "form-control" } })
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.CollAgreementInfo[i].PerHourOnCallWeekend, new { htmlAttributes = new { @class = "form-control" } })
+                </td>
+            </tr>
+        }
+    </table>
+
+    <div class="row">
+        <div class="form-group">
+            <div class="col col-md-1 col-left-margin-18">
+                <input type="submit" name="submitButton" value="Bekräfta" class="btn btn-danger btn-danger-small" id="proceed" />
+            </div>
+            <div class="col col-md-1">
+                @Html.ActionLink("Avbryt", "Index", "CollectiveAgreements", null, new { @class = "btn btn-secondary btn-secondary-small" })
+            </div>
+        </div>
+    </div>
+}
